
[TestApp/focus - 1]
[32m╭─[0mMessage Assistant[32m──╮[m╭─Conversation───────────────────────────╮
[32m│[m[37m[m[7m [m                   [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Conversations──────╮│                                        │
│  2                 ││                                        │
│  1                 ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---

[TestApp/focus - 2]
╭─Message Assistant──╮╭─Conversation───────────────────────────╮
│[37m[m[7m [m                   ││                                        │
│[37m[m[30m                    [m││                                        │
│[37m[m[30m                    [m││                                        │
╰────────────────────╯│                                        │
[32m╭─[0mConversations[32m──────╮[m│                                        │
[32m│[m[44m  2[m[44m                 [m[32m│[m│                                        │
[32m│[m  1                 [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m│[m                    [32m│[m│                                        │
[32m╰────────────────────╯[m╰────────────────────────────────────────╯
---

[TestApp/focus - 3]
╭─Message Assistant──╮[32m╭─[0mConversation[32m───────────────────────────╮[m
│[37m[m[7m [m                   │[32m│[m                                        [32m│[m
│[37m[m[30m                    [m│[32m│[m                                        [32m│[m
│[37m[m[30m                    [m│[32m│[m                                        [32m│[m
╰────────────────────╯[32m│[m                                        [32m│[m
╭─Conversations──────╮[32m│[m                                        [32m│[m
│  2                 │[32m│[m                                        [32m│[m
│  1                 │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
│                    │[32m│[m                                        [32m│[m
╰────────────────────╯[32m╰────────────────────────────────────────╯[m
---

[TestApp/focus - 4]
[32m╭─[0mMessage Assistant[32m──╮[m╭─Conversation───────────────────────────╮
[32m│[m[37m[m[7m [m                   [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Conversations──────╮│                                        │
│  2                 ││                                        │
│  1                 ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---

[TestApp/input - 1]
[32m╭─[0mMessage Assistant[32m──╮[m╭─Conversation───────────────────────────╮
[32m│[m[37m[mhey[7m [m                [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m╰────────────────────╯[m│                                        │
╭─Conversations──────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---

[TestApp/input - 2]
[32m╭─[0mMessage Assistant[32m──╮[m╭─Conversation───────────────────────────╮
[32m│[m[37m[m[7m [m                   [32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                        │
[32m│[m[37m[m[30m                    [m[32m│[m│                                     hey│
[32m╰────────────────────╯[m│                                        │
╭─Conversations──────╮│                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
│                    ││                                        │
╰────────────────────╯╰────────────────────────────────────────╯
---
